# Smart-Search-PDFs

./: .gitignore  README.md  create-JSON-EMB.py  pyproject.toml  run.sh  search.sh  search_app.py  search_engine.py  test_search.py
docs/: CHANGELOG.md
